--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 services:
   adservice:
     image: adservice
+    environment:
+      - PORT=9555
 
   productcatalogservice:
     image: productcatalogservice
+    environment:
+      - PORT=3550
+      - DISABLE_PROFILER=1
 
   cartservice:
     image: cartservice
@@ -17,12 +22,24 @@ services:
 
   shippingservice:
     image: shippingservice
+    environment:
+      - PORT=50051
+      - DISABLE_PROFILER=1
 
   currencyservice:
     image: currencyservice
+    environment:
+      - PORT=7000
+      - DISABLE_PROFILER=1
 
   paymentservice:
     image: paymentservice
+    environment:
+      - PORT=50051
+      - DISABLE_PROFILER=1
 
   emailservice:
     image: emailservice
+    environment:
+      - PORT=8080
+      - DISABLE_PROFILER=1
